--- a/public/style.css
+++ b/public/style.css
@@ -806,7 +806,7 @@ a.active {
 	text-transform: uppercase;
 	font: 700 15px/18px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-.navbar-default .navbar-nav > li {
+ .navis.navbar-default .navbar-nav > li {
 	float: none;
 	position: relative;
 	letter-spacing: .3px;
@@ -814,7 +814,7 @@ a.active {
 	display: inline-block;
 	vertical-align: middle;
 }
-.navbar-default .navbar-nav > li > a {
+.navbar-default .navis .navbar-nav > li > a {
 	padding: 0;
 	font: inherit;
 	color: #7c7c7c;
