added loader and more

--- a/public/style.css
+++ b/public/style.css
@@ -2038,10 +2038,8 @@ a.active {
 31. Loader Container / .loader-container
 -------------------------------------------------------------------*/
 .loader-container {
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
+	top: 50%;
+	left: 30%;
 	z-index: 9999;
 	position: fixed;
 	background: #fff;
